--- a/Chinese Comprehensible Input Finder.ipynb
+++ b/Chinese Comprehensible Input Finder.ipynb
@@ -2,8 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-21T09:48:59.899810Z",
+     "start_time": "2019-11-21T09:48:59.693948Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#encoding=utf-8\n",
@@ -33,8 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-21T09:49:50.123834Z",
+     "start_time": "2019-11-21T09:49:50.117490Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def strip_chinese_punctuation(str):\n",
@@ -53,8 +63,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-21T09:49:52.670719Z",
+     "start_time": "2019-11-21T09:49:52.661246Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def build_corpus():\n",
@@ -80,19 +95,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-21T09:49:58.653683Z",
+     "start_time": "2019-11-21T09:49:56.603248Z"
+    },
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Building prefix dict from the default dictionary ...\n",
+      "Dumping model to file cache /tmp/jieba.cache\n",
+      "Loading model cost 0.936 seconds.\n",
+      "Prefix dict has been built succesfully.\n"
+     ]
+    }
+   ],
    "source": [
     "docs, doc_count = build_corpus()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-21T09:50:05.124803Z",
+     "start_time": "2019-11-21T09:50:05.121475Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def build_vocabulary():\n",
@@ -105,8 +140,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-21T09:50:09.800278Z",
+     "start_time": "2019-11-21T09:50:09.778353Z"
+    }
+   },
    "outputs": [],
    "source": [
     "vocabulary, dict_size = build_vocabulary()"
@@ -114,12 +154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-21T09:50:26.103128Z",
+     "start_time": "2019-11-21T09:50:26.096142Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def build_term_doc_matrix():\n",
-    "        start = time.time()\n",
     "        row = -1\n",
     "        col = -1\n",
     "        td_matrix = np.zeros((doc_count, dict_size))\n",
@@ -130,22 +174,25 @@
     "                col += 1\n",
     "                td_matrix[row][col] = sum(1 for k in i if k == j)\n",
     "            col = -1\n",
-    "        end = time.time()\n",
-    "        print(\"Time elapsed: \" + str(end - start) + \" seconds\")\n",
     "        return td_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-21T09:53:35.464677Z",
+     "start_time": "2019-11-21T09:50:28.704771Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "(11778, 15941)\n",
-      "137.54213690757751\n"
+      "Time elapsed: 186.75749325752258 seconds\n"
      ]
     }
    ],
@@ -155,8 +202,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-21T09:54:02.976044Z",
+     "start_time": "2019-11-21T09:54:02.965806Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -170,7 +222,7 @@
        "       [0., 0., 0., ..., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,8 +233,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-21T09:54:07.083857Z",
+     "start_time": "2019-11-21T09:54:07.080424Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -198,8 +255,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-21T09:54:13.005668Z",
+     "start_time": "2019-11-21T09:54:13.001282Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def build_known_words():\n",
@@ -226,8 +288,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-21T09:54:14.852068Z",
+     "start_time": "2019-11-21T09:54:14.837462Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -243,8 +310,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-21T09:54:16.963971Z",
+     "start_time": "2019-11-21T09:54:16.958085Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -252,7 +324,7 @@
        "(15941,)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,8 +335,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-21T09:54:19.193429Z",
+     "start_time": "2019-11-21T09:54:19.189676Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -272,7 +349,7 @@
        "11778"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12154,7 +12231,56 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "position": {
+    "height": "357px",
+    "left": "951px",
+    "right": "20px",
+    "top": "120px",
+    "width": "350px"
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
